--- a/css/master.css
+++ b/css/master.css
@@ -78,19 +78,7 @@ p {
 }
 
 ::-webkit-scrollbar {
-    width: 2px;
-}
-
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #000;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #000;
+    display: none;
 }
 
 .share-links ion-icon {
